--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "react-toastify": "^7.0.4",
     "typescript": "^4.3.2",
     "vite": "^2.4.3"
   }
