--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootswatch": "^5.0.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
